RESOLVED FIXED19082
[Qt] Full-page plugins not activated
https://bugs.webkit.org/show_bug.cgi?id=19082
Summary [Qt] Full-page plugins not activated
marcoil
Reported 2008-05-15 12:09:16 PDT
When visiting a page which should contain a full-page PluginView, nothing is displayed. For example, visiting http://www.youtube.com/active_sharing.swf or http://acroeng.adobe.com/Test_Files/quickie/95annrep.pdf with the correct plugins installed should display the PluginView occupying the whole view.
Attachments
Return true if a mime type is supported by a plugin (1.12 KB, patch)
2008-06-15 16:07 PDT, Marco Barisione
hausmann: review+
Completes the fix, r34656 (1.34 KB, patch)
2008-06-19 09:59 PDT, marcoil
hausmann: review+
Marco Barisione
Comment 1 2008-06-15 16:07:03 PDT
Created attachment 21719 [details] Return true if a mime type is supported by a plugin This fix only part of the problem as there is some other bug preventing plugins to work when they are not contained inside a HTML page.
marcoil
Comment 2 2008-06-19 09:59:02 PDT
Created attachment 21840 [details] Completes the fix, r34656 This patch and Marco Barisione's one together fix the problem.
marcoil
Comment 3 2008-06-19 10:01:34 PDT
I forgot to add that, when fixed, the Qt port also exhibits bug #18938.
Simon Hausmann
Comment 4 2008-06-20 03:00:30 PDT
Landed in r34687 and r34688. Thanks Marc!
Note You need to log in before you can comment on or make changes to this bug.