2008-06-20  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=19082
        [Qt] Full-page plugins not activated

Canonical link: https://commits.webkit.org/27135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34687 268f45cc-cd09-0410-ab3c-d52691b4dbfc